feat: add jar building